--- a/micro-weather-city-eureka/build.gradle
+++ b/micro-weather-city-eureka/build.gradle
@@ -1,45 +1,42 @@
-plugins{
+plugins {
     id 'org.springframework.boot' version '2.6.1'
-	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-	id 'java'
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
+    id 'java'
 }
+
+group 'org.example'
+version '1.0-SNAPSHOT'
 
 ext {
 	set('springCloudVersion', "2021.0.0")
-	name = 'Eureka Server'
 	description = 'Eureka Server demo project'
 	version='0.0.1-SNAPSHOT'
 	sourceEncoding='UTF-8'
 }
-
 repositories {
-	mavenCentral()
-	maven { url 'https://repo.spring.io/release/' }
-	maven { url "https://repo.spring.io/libs-snapshot-local" }
-	maven { url "https://repo.spring.io/libs-milestone-local" }
-	maven { url "https://repo.spring.io/libs-release-local" }
-	maven { url "https://repo.springsource.org/plugins-release" }
+    mavenCentral()
 }
-
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
-
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'com.baomidou:mybatis-plus-boot-starter:3.3.2'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'com.baomidou:mybatis-plus-boot-starter:3.3.2'
     // https://mvnrepository.com/artifact/org.flywaydb/flyway-core
     implementation 'org.flywaydb:flyway-core:8.5.13'
     // https://mvnrepository.com/artifact/org.postgresql/postgresql
     implementation 'org.postgresql:postgresql:42.2.5'
-	compileOnly 'org.projectlombok:lombok:1.18.10'
+    // https://mvnrepository.com/artifact/org.projectlombok/lombok
+    compileOnly 'org.projectlombok:lombok:1.18.10'
+
 }
 sourceSets {
     main {
@@ -49,6 +46,6 @@ sourceSets {
         }
     }
 }
-test{
-	useJUnitPlatform()
+test {
+    useJUnitPlatform()
 }
