--- a/micro-weather-city-eureka/src/main/resources/application.properties
+++ b/micro-weather-city-eureka/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-server.port=8085
-spring.application.name:micro-weather-eureka-client-feign-hystrix
+server.port=8091
+spring.application.name:micro-weather-city-eureka
 eureka.client.serviceUrl.defaultZone:http://localhost:8761//eureka/
 feign.client.config.feignName.connectTimeout:5000
 feign.client.config.feignName.readTimeout:5000
 # 开启feign.hystrix
-feign.hystrix.enabled=true
+## database ##
 spring.datasource.url=jdbc:postgresql://localhost:5432/micro-weather
-spring.datasource.username=cityserver2
-spring.datasource.password=city-server2
+spring.datasource.username=cityserver
+spring.datasource.password=city-server
 spring.datasource.driver-class-name=org.postgresql.Driver
 #// flyway
 spring.flyway.enabled:true
 spring.flyway.baseline-on-migrate:true
 spring.flyway.locations=classpath:db/migration
+spring.flyway.table:flyway_schema_history_city
