--- a/micro-weather-city-eureka/build.gradle
+++ b/micro-weather-city-eureka/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    // https://mvnrepository.com/artifact/com.xuxueli/xxl-job-core
+    implementation 'com.xuxueli:xxl-job-core:2.3.0'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'com.baomidou:mybatis-plus-boot-starter:3.3.2'
