--- a/micro-weather-city-eureka/src/main/resources/application.properties
+++ b/micro-weather-city-eureka/src/main/resources/application.properties
@@ -14,3 +14,19 @@ spring.flyway.enabled:true
 spring.flyway.baseline-on-migrate:true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.table:flyway_schema_history_city
+### xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
+xxl.job.admin.addresses=http://localhost:6100/xxl-job-admin
+### xxl-job, access token
+xxl.job.accessToken=default_token
+### xxl-job executor appname
+xxl.job.executor.appname=xxl-job-executor-city-eureka
+### xxl-job executor registry-address: default use address to registry , otherwise use ip:port if address is null
+xxl.job.executor.address=
+### xxl-job executor server-info
+xxl.job.executor.ip=localhost
+### ???????????0???????????????????????????
+xxl.job.executor.port=9999
+### xxl-job executor log-path
+xxl.job.executor.logpath=/Users/panyurou/Temp/data/applogs/xxl-job/jobhandler
+### xxl-job executor log-retention-days ??????
+xxl.job.executor.logretentiondays=30
