chore: 移除zookeeper, ribbon,consul

--- a/micro-weather-eureka-client-gateway/src/main/resources/application.yml
+++ b/micro-weather-eureka-client-gateway/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9090
 spring:
   application:
-    name: micro-weather-eureka-client-gateway
+    name: micro-weather-gateway
   cloud:
     gateway: #网关路由配置
       discovery:
