--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ include 'micro-weather-config-client'
 include 'micro-weather-config-server'
 include 'micro-weather-consul'
 include 'micro-weather-eureka-client-feign-hystrix'
-include 'micro-weather-eureka-client-gateway'
+include 'micro-weather-gateway'
 include 'micro-weather-eureka-client-ribbon'
 include 'micro-weather-zookeeper'
 include 'micro-weather-eureka-server'
